Fix layout error with misaligned label

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ form {
 
 label {
   position: relative;
-  width: 15rem;
+  width: 13rem;
 }
 
 input {
@@ -124,8 +124,9 @@ button:hover {
 
 a {
   text-decoration: none;
-  color: rgb(18, 114, 18)
+  color: rgb(18, 114, 18);
 }
 
 a:visited {
-  color: rgb(18, 114, 18)
+  color: rgb(18, 114, 18);
+}
